--- a/index.html
+++ b/index.html
@@ -1,12 +1,133 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Sample Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Online Literature Archive</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+        header h1 {
+            margin: 0;
+        }
+        nav {
+            background-color: #444;
+            padding: 10px;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin-right: 15px;
+        }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+        .content {
+            padding: 20px;
+        }
+        .work {
+            background-color: white;
+            margin-bottom: 10px;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .work h2 {
+            margin-top: 0;
+        }
+        .category-list {
+            margin: 20px 0;
+        }
+        .category-list a {
+            background-color: #ddd;
+            padding: 8px 12px;
+            border-radius: 5px;
+            margin-right: 10px;
+            text-decoration: none;
+            color: #333;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 15px 0;
+            margin-top: 30px;
+        }
+    </style>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<header>
+    <h1>Online Literature Archive</h1>
+    <p>Explore a vast collection of literary works</p>
+</header>
+
+<nav>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Genres</a></li>
+        <li><a href="#">Authors</a></li>
+        <li><a href="#">Search</a></li>
+    </ul>
+</nav>
+
+<div class="content">
+    <h2>Featured Works</h2>
+    
+    <div class="work">
+        <h2>Title of the First Work</h2>
+        <p><strong>Author:</strong> John Doe</p>
+        <p><strong>Genre:</strong> Fiction</p>
+        <p><strong>Description:</strong> A brief summary of the work goes here. This is a placeholder text for a great literary work in your archive.</p>
+        <a href="#" style="color: #007bff;">Read More...</a>
+    </div>
+
+    <div class="work">
+        <h2>Title of the Second Work</h2>
+        <p><strong>Author:</strong> Jane Smith</p>
+        <p><strong>Genre:</strong> Mystery</p>
+        <p><strong>Description:</strong> This is a description for the second work in the archive. Summarize the plot, themes, or notable aspects here.</p>
+        <a href="#" style="color: #007bff;">Read More...</a>
+    </div>
+
+    <div class="work">
+        <h2>Title of the Third Work</h2>
+        <p><strong>Author:</strong> Alex Johnson</p>
+        <p><strong>Genre:</strong> Fantasy</p>
+        <p><strong>Description:</strong> A brief description of the third work, explaining the key elements and themes of the literary piece.</p>
+        <a href="#" style="color: #007bff;">Read More...</a>
+    </div>
+
+    <div class="category-list">
+        <h3>Browse by Category:</h3>
+        <a href="#">Fiction</a>
+        <a href="#">Fantasy</a>
+        <a href="#">Science Fiction</a>
+        <a href="#">Mystery</a>
+        <a href="#">Poetry</a>
+        <a href="#">Non-Fiction</a>
+    </div>
+</div>
+
+<footer>
+    <p>&copy; 2025 Online Literature Archive | All Rights Reserved</p>
+</footer>
 
 </body>
 </html>
