--- a/template.html
+++ b/template.html
@@ -45,14 +45,18 @@
 			
 			</div>
 			<div class="mainsection">
+				<div class="headerLinks">
+					<span class="user">Not logged in</span> <a href="#">Talk</a> <a href="#">Contributions</a> <a href="#">Create account</a> <a href="#">Log in</a>
+				</div>
 				<div class="tabs clearfix">
 					<div class="tabsLeft">
 						<ul>
-							<li><a href="#" class="active">Archived File</a></li>			
+							<li><a href="#" class="active">Article</a></li>
+							<li><a href="#">Talk</a></li>						
 						</ul>
 					</div>
 					<div id="simpleSearch">
-						<input type="text" name="searchInput" id="searchInput" placeholder="Search G/t Archive" size="12" />
+						<input type="text" name="searchInput" id="searchInput" placeholder="Search Wikipedia" size="12" />
 						<div id="submitSearch"></div>
 					</div>
 					<div class="tabsRight">
@@ -65,19 +69,17 @@
 				
 				</div>
 				<div class="article">
-					<h1>Article Title</h1>
-					<p class="siteSub">Subtitle. Name of site(?)</p>
-					<p class="roleNote">Misc Notes</p>
+					<h1>Simple Wikipedia Website Template</h1>
+					<p class="siteSub">From Wikipedia, the free encyclopedia</p>
+					<p class="roleNote">This article is about the writing implement. For other uses, see Pencil (disambiguation).</p>
 
 					<div class="articleRight">
 						<div class="articleRightInner">
 							<img src="img/pencil.jpg" alt="pencil" />
 						</div>
-						This is an image <a href="">caption</a>
+						This is a blue <a href="">pencil</a>
 					</div>
-					<p>
-						<a href="archiveactive/FOJ/Why Can_t I Stop Thinking Of Tiny Men_ _ (Art by @bottlesandbuttons_).__SYNOPSIS__PLEASE... (1_31_2025 1_38_16 PM).html">Sample Link</a>
-					</p>
+					<p>Lorem ipsum <strong>dolor sit amet</strong>, nonumes voluptatum mel ea, cu case ceteros cum. Novum commodo malorum vix ut. Dolores consequuntur in ius, sale electram dissentiunt quo te. Cu duo omnes invidunt, eos eu mucius fabellas. Stet facilis ius te, quando voluptatibus eos in. Ad vix mundi alterum, integre urbanitas intellegam vix in.</p>
 					<p>Eum facete intellegat ei, ut mazim melius usu. Has elit simul primis ne, regione minimum id cum. Sea deleniti dissentiet ea. Illud mollis moderatius ut per, at qui ubique populo. Eum ad cibo legimus, vim ei quidam fastidii.</p>
 					<p>Quo debet vivendo ex. Qui ut admodum senserit partiendo. Id adipiscing disputando eam, sea id magna pertinax concludaturque. Ex ignota epicurei quo, his ex doctus delenit fabellas, erat timeam cotidieque sit in. Vel eu soleat voluptatibus, cum cu exerci mediocritatem. Malis legere at per, has brute putant animal et, in consul utamur usu.</p>
 					<p>Te has amet modo perfecto, te eum mucius conclusionemque, mel te erat deterruisset. Duo ceteros phaedrum id, ornatus postulant in sea. His at autem inani volutpat. Tollit possit in pri, platonem persecuti ad vix, vel nisl albucius gloriatur no.</p>
