IT FINALLY WORKS AHAA
AHAHAHAHAA

--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
 						This is an image <a href="">caption</a>
 					</div>
 					<p>
-						<a href="archiveactive/FOJ/Why Can_t I Stop Thinking Of Tiny Men_ _ (Art by @bottlesandbuttons_).__SYNOPSIS__PLEASE... (1_31_2025 1_38_16 PM).html">Sample Link</a>
+						<a href="archive/A Fraction of Justice (Chapter %231)-ratcatcher0325-(2_2_2025 8：23：43 AM).u.zip.html">A Fraction of Justice (Chapter #1)</a><br>
+						<a href="archive/A Fraction of Justice (Chapter %232)-ratcatcher0325-(2_2_2025 8：23：44 AM).u.zip.html">A Fraction of Justice (Chapter #2)</a><br>
+						<a href="archive/A Fraction of Justice (Chapter %233)-ratcatcher0325-(2_2_2025 8：23：44 AM).u.zip.html">A Fraction of Justice (Chapter #3)</a><br>
+						<a href="archive/A Fraction of Justice (Chapter %234)-ratcatcher0325-(2_2_2025 8：23：44 AM).u.zip.html">A Fraction of Justice (Chapter #4)</a><br>
+						<a href="archive/A Fraction of Justice (Chapter %235)-ratcatcher0325-(2_2_2025 8：23：44 AM).u.zip.html">A Fraction of Justice (Chapter #5)</a><br>
+						<a href="archive/A Fraction of Justice (Chapter %236)-ratcatcher0325-(2_2_2025 8：23：44 AM).u.zip.html">A Fraction of Justice (Chapter #6)</a><br>
 					</p>
 					<p>Eum facete intellegat ei, ut mazim melius usu. Has elit simul primis ne, regione minimum id cum. Sea deleniti dissentiet ea. Illud mollis moderatius ut per, at qui ubique populo. Eum ad cibo legimus, vim ei quidam fastidii.</p>
 					<p>Quo debet vivendo ex. Qui ut admodum senserit partiendo. Id adipiscing disputando eam, sea id magna pertinax concludaturque. Ex ignota epicurei quo, his ex doctus delenit fabellas, erat timeam cotidieque sit in. Vel eu soleat voluptatibus, cum cu exerci mediocritatem. Malis legere at per, has brute putant animal et, in consul utamur usu.</p>
